made minor changes to InitializePA, AbstractBuildPA, and CEValidation for debugging